--- a/templates/company/all_candidate.html
+++ b/templates/company/all_candidate.html
@@ -41,6 +41,7 @@
     <div>
       <h3>{{ candidate_datas.username }}</h3>
       <h4>{{candidate_datas.qualification}}</h4>  
+      <h4>{{candidate_datas.skills}}</h4>
       <a href="{% url 'candidate_list' candidate_datas.id %}">View</a>
     </div>
   </div>
