--- a/templates/company/profile_edit.html
+++ b/templates/company/profile_edit.html
@@ -24,6 +24,6 @@
 
     <label style="font-size: 18px; font-weight: bold;">Description</label><br>
     <input type="text" name="description" value="{{data.description}}" style="padding: 8px; width: 100%; margin-bottom: 10px;"><br>
-
+<a href="{% url 'company_details' %}">Add Details</a> <br> <br>
     <input type="submit" value="Save" style="padding: 10px 20px; font-size: 16px; background-color: #4CAF50; color: #fff; border: none; cursor: pointer;">
 </form>
