--- a/templates/company/company_details.html
+++ b/templates/company/company_details.html
@@ -33,11 +33,11 @@
     <form method="post">
         {% csrf_token %}
 
-        <label>Industry</label> <input type="text" name="industry"><br>
-        <label>Head Quarters</label> <input type="text" name="headquarters"><br>
-        <label>Website</label> <input type="text" name="web_site_url"><br>
-        <label>Company Type</label> <input type="text" name="company_type"><br>
-        <label>Founded</label> <input type="number" name="year_founded"><br>
+        <label>Industry</label>  <br><input type="text" name="industry"><br>
+        <label>Head Quarters</label>  <br><input type="text" name="headquarters"><br>
+        <label>Website</label>  <br><input type="text" name="web_site_url"><br>
+        <label>Company Type</label>  <br><input type="text" name="company_type"><br>
+        <label>Founded</label>  <br><input type="number" name="year_founded"><br>
         <input type="submit" value="Save">
     </form>
 </body>
